# Semantic-Search-Engine-for-Academic-Papers

./: Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
logs/: running.logs
notebooks/: data_preprocessor.ipynb  get_data.ipynb
notebooks/logs/: running.logs
src/: __init__.py
src/config/: configuration.py
src/constants/: __init__.py
src/data/: data_ingestion.py
src/utils/: common.py
